--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-plotly
-gensim
-scikit-learn
-joblib
-pyLDAvis
+streamlit==1.32.0
+pandas==2.0.0
+numpy==1.24.0
+matplotlib==3.7.0
+seaborn==0.12.2
+plotly==5.14.0
+gensim==4.3.1
+scikit-learn==1.2.2
+joblib==1.2.0
+pyLDAvis==3.4.0
